# NRexercises

./: .gitignore  CMakeLists.txt  README.md
Exercise1/: CMakeLists.txt  exercise1_A.cpp  exercise1_A.h  exercise1_B.cpp  plot_a1.py  plot_a2.py  plot_b2.py  plot_b3_RSME.py  plot_b4_RK4.py  plot_first_deriv.py  plot_output.py  plot_second_deriv.py
Exercise2/: actually_good_excercise2.cpp  exercise2B.cpp  exercise2_B2.cpp  exercise2_B34.cpp  penrose_plot.py  plot_results.py
